include/ishtar.h

struct ishtar_class_t;
struct RuntimeIshtarAlias_Method;
struct RuntimeIshtarAlias_Type;
struct ishtar_module_t;
struct ishtar_method_header_t;
typedef enum class_flag_t {
    CLASS_NONE = 0,
    CLASS_PUBLIC = 2,
    CLASS_STATIC = 4,
    CLASS_INTERNAL = 8,
    CLASS_PROTECTED = 16,
    CLASS_PRIVATE = 32,
    CLASS_ABSTRACT = 64,
    CLASS_SPECIAL = 128,
    CLASS_INTERFACE = 256,
    CLASS_ASPECT = 512,
    CLASS_UNDEFINED = 1024,
    CLASS_UNRESOLVED = 2048,
    CLASS_PREDEFINED = 4096,
    CLASS_NOTCOMPLETED = 8192,
    CLASS_AMORPHOUS = 16384,
} class_flag_t;
typedef struct ishtar_rtoken_t {
    uint64_t value;
    uint32_t module_i_d;
    uint32_t class_i_d;
} ishtar_rtoken_t;
typedef struct ishtar_types_t {
    struct ishtar_class_t* object_class;
    struct ishtar_class_t* value_type_class;
    struct ishtar_class_t* void_class;
    struct ishtar_class_t* string_class;
    struct ishtar_class_t* byte_class;
    struct ishtar_class_t* s_byte_class;
    struct ishtar_class_t* int32_class;
    struct ishtar_class_t* int16_class;
    struct ishtar_class_t* int64_class;
    struct ishtar_class_t* u_int32_class;
    struct ishtar_class_t* u_int16_class;
    struct ishtar_class_t* u_int64_class;
    struct ishtar_class_t* half_class;
    struct ishtar_class_t* float_class;
    struct ishtar_class_t* double_class;
    struct ishtar_class_t* decimal_class;
    struct ishtar_class_t* bool_class;
    struct ishtar_class_t* char_class;
    struct ishtar_class_t* array_class;
    struct ishtar_class_t* exception_class;
    struct ishtar_class_t* raw_class;
    struct ishtar_class_t* aspect_class;
    struct ishtar_class_t* function_class;
    struct ishtar_class_t* range_class;
    void* all;
    void* mapping;
} ishtar_types_t;
typedef struct ishtar_method_header_t {
    uint32_t code_size;
    void* code;
    int16_t max_stack;
    void* exception_handler_list;
    void* labels_map;
    void* labels;
} ishtar_method_header_t;
typedef struct RuntimeIshtarAlias_Method {
    void* name;
    void* method;
} RuntimeIshtarAlias_Method;
typedef struct RuntimeIshtarAlias_Type {
    void* name;
    struct ishtar_class_t* _class;
} RuntimeIshtarAlias_Type;
typedef struct ishtar_class_t {
    void* _self_reference;
    void* methods;
    void* fields;
    void* aspects;
    struct ishtar_module_t* owner;
    struct ishtar_class_t* parent;
    void* full_name;
    bool _is_disposed;
    int32_t type_code;
    class_flag_t flags;
    struct ishtar_rtoken_t runtime_token;
    uint32_t i_d;
    uint16_t magic1;
    uint16_t magic2;
    uint64_t computed_size;
    bool is_inited;
    void* vtable;
    uint64_t vtable_size;
} ishtar_class_t;
typedef struct ishtar_module_t {
    void* vault;
    uint32_t i_d;
    struct ishtar_version_t version;
    void* alias_table;
    void* class_table;
    void* deps_table;
    void* aspects_table;
    void* types_table;
    void* generics_table;
    void* fields_table;
    void* string_table;
    void* const_storage;
    struct ishtar_string_t* _name;
    struct ishtar_module_t* _self;
    struct ishtar_class_t* bootstrapper;
} ishtar_module_t;