include/ishtar.rs

#[test]
fn bindgen_test_layout_ishtar_types_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_types_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_types_t>(),
        208usize,
        concat!("Size of: ", stringify!(ishtar_types_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_types_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_types_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).object_class) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(object_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).value_type_class) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(value_type_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).void_class) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(void_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).string_class) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(string_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).byte_class) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(byte_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).s_byte_class) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(s_byte_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).int32_class) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(int32_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).int16_class) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(int16_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).int64_class) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(int64_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).u_int32_class) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(u_int32_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).u_int16_class) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(u_int16_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).u_int64_class) as usize - ptr as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(u_int64_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).half_class) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(half_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).float_class) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(float_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).double_class) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(double_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).decimal_class) as usize - ptr as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(decimal_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bool_class) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(bool_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).char_class) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(char_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).array_class) as usize - ptr as usize },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(array_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).exception_class) as usize - ptr as usize },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(exception_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).raw_class) as usize - ptr as usize },
        160usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(raw_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).aspect_class) as usize - ptr as usize },
        168usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(aspect_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).function_class) as usize - ptr as usize },
        176usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(function_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).range_class) as usize - ptr as usize },
        184usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(range_class)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).all) as usize - ptr as usize },
        192usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(all)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mapping) as usize - ptr as usize },
        200usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_types_t),
            "::",
            stringify!(mapping)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_method_header_t {
    pub code_size: u32,
    pub code: *mut ::std::os::raw::c_void,
    pub max_stack: i16,
    pub exception_handler_list: *mut ::std::os::raw::c_void,
    pub labels_map: *mut ::std::os::raw::c_void,
    pub labels: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_ishtar_method_header_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_method_header_t> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_method_header_t>(),
        48usize,
        concat!("Size of: ", stringify!(ishtar_method_header_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_method_header_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_method_header_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).code_size) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_header_t),
            "::",
            stringify!(code_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).code) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_header_t),
            "::",
            stringify!(code)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).max_stack) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_header_t),
            "::",
            stringify!(max_stack)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).exception_handler_list) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_header_t),
            "::",
            stringify!(exception_handler_list)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).labels_map) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_header_t),
            "::",
            stringify!(labels_map)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).labels) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_header_t),
            "::",
            stringify!(labels)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RuntimeIshtarAlias_Method {
    pub name: *mut ::std::os::raw::c_void,
    pub method: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_RuntimeIshtarAlias_Method() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeIshtarAlias_Method> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeIshtarAlias_Method>(),
        16usize,
        concat!("Size of: ", stringify!(RuntimeIshtarAlias_Method))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeIshtarAlias_Method>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeIshtarAlias_Method))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarAlias_Method),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).method) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarAlias_Method),
            "::",
            stringify!(method)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RuntimeIshtarAlias_Type {
    pub name: *mut ::std::os::raw::c_void,
    pub _class: *mut ishtar_class_t,
}
